# xrec

./: .gitignore  .gitlab-ci.yml  .gitmodules  .nautilus-metafile.xml  CMakeLists.txt  ChangeLog  EC.README  MANIFEST  Makefile  README  README.md  addlgpl-all  clean-all  clean-makefiles  compare-source  config.in  dict.dtd  download-xrec-utilities.sh  edit-makefiles.sh  essaidtd.xml  link-makefiles.sh  make-xrec-bin.sh  make-xrec-lib.sh  search-lib  search-source  stats-xrec.sh  touch-all
.ssm.d/: post-install.in
autog/: Makefile  impnone.cdk  xanotat.ftn  xautog2.cdk  xautog4.cdk  xautog5.cdk  xautoget.ftn  xcharsz.cdk  xezmy.ftn  xgettk4.ftn  xgridal.ftn  xlabmod.ftn  xlnth.ftn  xplot80.ftn  xseti.ftn  xsysdat.ftn  xtick4.ftn  xticks.ftn  xuliber.ftn
convert-dict/: Makefile  cvtdictrec.ftn  dict.c  dictrec_e.xml  dictrec_f.xml  grille.c  impnone.cdk  rlx.ftn  setitem.ftn  (+1 more)
sources/src/xrec/main/: CMakeLists.txt
src/rmn/: CMakeLists.txt
src/xrec/: CMakeLists.txt  README
src/xrec/gd2/: CMakeLists.txt  gd.c  gd_gd2.c  gd_png.c  gd_topal.c  gdft.c  index.ps
src/xrec/gd_wgl/: CMakeLists.txt  gd_pwrit.c  gd_wglafi.c  gd_wglafx.c  gd_wglali.c  gd_wglalx.c  gd_wglbbf.c  gd_wglcfi.c  gd_wglcfx.c  gd_wglchngfs.c  gd_wglcli.c  gd_wglclr.c  gd_wglclw.c  gd_wglclx.c  gd_wglcmi.c  gd_wglcmx.c  gd_wglcol.c  gd_wglcolf.c  gd_wgldbf.c  gd_wgldcm.c  gd_wgldeflst.c  gd_wgldpt.c  gd_wgldri.c  gd_wglecr.c  gd_wglfbf.c  gd_wglfsh.c  gd_wglfshlb.c  gd_wglgpl.c  gd_wglgvx.c  gd_wglgwz.c  gd_wgliax.c  gd_wglinicmap.c  gd_wglinids.c  gd_wglinipat.c  gd_wglinit.c  gd_wgliniwin.c  gd_wgliniwpx.c  gd_wglinstcmap.c  gd_wgllwi.c  gd_wglmapc.c  (+33 more)
src/xrec/gd_wgl/tests/: gd_couleur-util.c
src/xrec/gdb/: CMakeLists.txt  dbinit.c  desc.c  dlb.c  gdb.c  map.c  pln.c  point.c  point.h  pol.h  rgis.c  scnio.h  segment.h  sock.c
src/xrec/include/: b120.xbm  b150.xbm  b30.xbm  b60i.xbm  b90.xbm  b90i.xbm  checkmark.h  curseurs.xbm  declare.h  dlog.h  edit.h  f77name.h  gd.h  gd_io.h  gd_wgl.h  gd_wglfonct.h  gdb.h  gdcache.h  gdfontg.h  gdfontl.h  gdfontmb.h  gdfonts.h  gdfontt.h  gmp.h  lic.h  macros.h  patchlevel.h  rec.h  rec_functions.h  rec_util.h  rec_version.h  rond.h  rpn_e.xbm  rpn_f.xbm  sea.xbm  select.h  service_e.xbm  souris.h  struct.h  vcar.h  (+9 more)
src/xrec/main/: CMakeLists.txt  rec.f
src/xrec/metacode/: CMakeLists.txt  aaaamac.cdk  account.f  blacklst.f  bpairp.cdk  cmpres2.f  com910.cdk  cpress.cdk  endian.cdk  haftpal.ftn  lnkpak.cdk  mapping.cdk  mesgid.cdk  metacod  new.ftn  params.cdk  pmetaview.f  praster.f  praster.ftn  pushopt.f  pushpar.ftn  putcar.cdk  stub.f  ttputid.f  ttrrini.f  ttrrini.ftn  tttban.f  tttcadr.f  tttcari.f  tttcari.ftn  tttclip.f  tttcolr.ftn  ttterfi.f  tttfill.f  tttfini.f  tttfini.ftn  tttfmid.ftn  tttfntx.f  tttinit.ftn  tttlkid.f  (+22 more)
src/xrec/png/: CMakeLists.txt  makefile.old
src/xrec/rec/: CMakeLists.txt
src/xrec/rec/lic/: Convolve2D.c  Convolve3D.c  DebugPrologue.ps  LIC.3  LIC_Convolve.3  LIC_Destroy.3  LIC_Filters.3  Modify.c  Query.c  liblic.h
src/xrec/rec/main/: aff_coupe.c  anim.c  aux.c  bidim.c  bidim_m.c  c_ezsint_mask.c  cmap.c  contour.c  convpr.f  couleur.c  coupe.c  defvar.f  dict.c  diffmgr.c  drlstl.f  drlstl_fxfy2.f90  enhance.c  enhance_m.c  f_convip.f90  fenlatlon.c  fermeur.c  fldmgr.c  fleche.c  fst_get_mask_key.f90  geometrie.c  grid.f  grid_status.c  grille.c  hilo.c  homelic.c  lclevent.c  legende.c  logo_rpn.c  manipule.c  mapinfo.c  mapxy2fxfy.f90  message.c  minmax_mgr.c  new-xfsl.f  no_rmnlib.c  (+60 more)
src/xrec/rec/main/temp/: anim4.c  c_xrec.c  ij2xy_warp_r.ftn90  mapxy2fxfy.ftn90  qqqxtrp.cdk  readrec.ftn  rlx.ftn  unsat.ftn  wgldrl.c  wglpolyfton.ftn  wglrfton.ftn
src/xrec/rec_util/: CMakeLists.txt
src/xrec/rec_util/autog/: xanotat.f  xautoget.f  xautolab.f  xbreak.f  xdispla.f  xebar.f  xezmxy.f  xezmy.f  xezxy.f  xezy.f  xgridal.f  xhstgram.f  xlabmod.f  xlgrd.f  xlinrd.f  xlnth.f  xplot80.f  xsysdat.f  xticks.f  xuliber.f
src/xrec/rec_util/autog/tests/: xautog1.cdk  xautog3.cdk  xautog6.cdk  xautolab.ftn  xdispla.ftn  xebar.ftn  xezxy.ftn  xhstgram.ftn  xlabmod.ftn  xlgrd.ftn  xlinrd.ftn
src/xrec/rec_util/gmp/: c_gmpdrw.c  c_gmpg2l.c  c_gmpinit.c  c_gmpl2g.c  c_gmpopt.c  c_gmpset.c  c_gmpzset.c  c_grfll.c  c_llfgr.c  comp_map.c  copy_map.c  free_map.c  gmp_convert.c  gmp_gvlatlon.c  gmp_perim.c  gmp_trim.c  gmp_verif.c  lire_gdb_geo.c  lire_geo.c  lire_rmn_geo.c  lire_rmn_latlon.c  newgeoitem.c  params_ligne.c  points.c  points_turbo.c  read-latlon.f  read_lalo.c  stuff1  swapFloats.c  vec_turbo.c  vecteurs.c
src/xrec/rec_util/gmp/tests/: tgeo2.ftn
src/xrec/rec_util/select/: flush.c  new-xfsl97.f  strutil.c  widgets-util.c  xrecsel.c
src/xrec/rec_util/select/temp/: xrecsel_1.c
src/xrec/rec_util/selfic/: edit.c  outil.c  repertoire.c  repertoire.h  select.c  select.h
src/xrec/rec_util/xdash/: unsat-xdash.c  unsat-xdash.c.19758  xcfvld.f  xdashbd.ftn  xdashd.f  xdashd.ftn  xdashd2.cdk  xdashget.f  xdashi.f  xdashset.f  xfdvdld.f  xfdvdld.ftn  xkurv1s.f  xkurv2s.ftn  xlined.ftn
src/xrec/rec_util/xplot88/: init.c  opset.dck  vcar.c  xopget.f  xopget.ftn  xplot88.c
src/xrec/wgl/: CMakeLists.txt  bitfinder.c  couleur-util.c  gdwgl.c  langue.c  logo.c  logo_sea.c  souris2.c  wglafi.c  wglafx.c  wglali.c  wglalx.c  wglasi.c  wglasx.c  wglbbf.c  wglbrb.c  wglbti.c  wglbtn.c  wglbtpi.c  wglbtpx.c  wglcfi.c  wglcfx.c  wglchngfs.c  wglcli.c  wglclr.c  wglclw.c  wglclx.c  wglcmi.c  wglcmx.c  wglcol.c  wglcolf.c  wglcrb.c  wgldbf.c  wgldbg.c  wgldcm.c  wgldeflst.c  wgldefncw.c  wgldld.c  wgldpt.c  wgldri.c  (+89 more)
src/xrec/x_wgl/: CMakeLists.txt  flush.c  x_bitfinder.c  x_initdev.c  x_invertChar.c  x_wglafi.c  x_wglali.c  x_wglbbf.c  x_wglbrb.c  x_wglbtn.c  x_wglbtp.c  x_wglbtpi.c  x_wglcfi.c  x_wglchngfs.c  x_wglcli.c  x_wglclr.c  x_wglclw.c  x_wglcmi.c  x_wglcol.c  x_wglcolf.c  x_wglcrb.c  x_wgldbf.c  x_wgldbg.c  x_wgldcm.c  x_wgldeflst.c  x_wgldefncw.c  x_wgldld.c  x_wgldpt.c  x_wgldri.c  x_wgldsi.c  x_wglecr.c  x_wglerb.c  x_wglfbf.c  x_wglfsc.c  x_wglfsh.c  x_wglfshlb.c  x_wglfsz.c  x_wglgacw.c  x_wglgbf.c  x_wglgco.c  (+63 more)
(+1043 files in other folders)
